# ddi-Datenbankdesign-und-Implementierung

./: .env.example  README.md  createdb.sql  docker-compose.yml  main.py  measurement_report_20250526_121655.json  measurement_report_20250526_121921.json  mongo_db.py  pyproject.toml  report.md  save_to_local_mongo.py  submission_criteria.md
data/categorie/: 10043474.json  10134927.json  10134993.json  10135013.json  10142552.json  10160210.json  10350026.json  10552745.json  10552752.json  10552791.json  10553336.json  10553342.json  10553347.json  10553365.json  10553396.json  10553416.json  10553443.json  10553466.json  10553500.json  10553507.json  10553514.json  10553524.json  10553530.json  10553536.json  10555041.json  10555066.json  10555122.json  10555170.json  10555213.json  10555228.json  10555235.json  10599164.json  10600312.json  10600319.json  10614089.json  10624930.json  10624950.json  10624964.json  10657238.json  10657279.json  (+402 more)
data/product/: 100100300000-2024-09-16T15:15:05.json  100100600000-2024-09-26T00:51:19.json  100102900000-2024-09-16T19:56:44.json  (+12359 more)
measurements/: __init__.py  base_measurement.py  performance_tests.py  query_tests.py  runner.py
models/: nutrition.py  offer.py  product.py  product_factory.py
setup/: database_config.py  dataloader.py  download_data.py  mongodb_manager.py  postgresql_manager.py  save_to_local_mongo.py  save_to_local_sql.py
src/: db_models.py  download_data.py  main.py  models.py  mongo_db.py  save_to_local_mongo.py  save_to_sql.py  sql_db.py
tests/: test_product_factory.py
utils/: postgres_utils.py
(+28421 files in other folders)
