[tool.poetry]
name = "ddi-datenbankdesign-und-implementierung"
version = "0.1.0"
description = ""
authors = ["BR4GER <benjamin.wuermli@students.fhnw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
